# dadada

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: block.html  block_after.html  block_before.html  cargo.rs  lib.rs  main.rs  style.css  template.html
src/static/: block_after.html  block_before.html  block_code.html  head.html  line-numbers.js  style.css  template.html
tests/: cli.rs  smoke.rs
tests/fixtures/extra_content/: expected.html  footer.md  header.html  meta.html
tests/fixtures/minimal/: lib.rs  neither.html  no-css.html  no-js.html  regular.html
tests/fixtures/occb-exmpl/: expected.html
