[package]
name = "dadada"
version = "0.9.5-dev"
authors = ["Benjamin Kampmann <ben@gnunicorn.org", "Rui  Vieira <ruidevieira@googlemail.com>"]
description = "Artisanal Rust inlined code documentation renderer"
homepage = "https://github.com/gnunicorn/dadada"
repository = "https://github.com/gnunicorn/dadada"
readme = "README.md"
keywords = ["cli", "documentation", "dada", "docco", "literate"]
categories = ["command-line-utilities"]
edition = "2018"
license = "MIT"

[lib]
name = "dadada"
path = "src/lib.rs"

[[bin]]
name = "dadada"
path = "src/main.rs"


[badges]
travis-ci = { repository = "gnunicorn/dadada" }
maintenance = { status = "actively-developed" }

[dependencies]
clap = "2.33.0"
pulldown-cmark = "0.5.3"

[dev-dependencies]
tempfile = "3.1"
file_diff = "1.0.0"
assert_cmd = "0.10"
predicates = "1"